<?xml version="1.0" encoding="utf-8"?>

<!--Partie 4 : interface de l'écran d'accueil-->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccueilActivity">

    <TextView
        android:id="@+id/titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/auteur"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/auteur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/createur"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/titre"
        app:layout_constraintBottom_toTopOf="@id/blanc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <FrameLayout
        android:id="@+id/blanc"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/auteur"
        app:layout_constraintBottom_toTopOf="@id/couleurInit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_weight="1"/>

    <TextView
        android:id="@+id/couleurInit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/couleurInitiale"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/blanc"
        app:layout_constraintBottom_toTopOf="@id/rouge"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/rouge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:textColor="@color/white"
        android:text="@string/rouge"
        app:layout_constraintTop_toBottomOf="@id/couleurInit"
        app:layout_constraintBottom_toTopOf="@id/vert"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/vert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:text="@string/vert"
        app:layout_constraintTop_toBottomOf="@id/rouge"
        app:layout_constraintBottom_toTopOf="@id/bleu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/bleu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:text="@string/bleu"
        app:layout_constraintTop_toBottomOf="@id/vert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>